@@ -1,3 +1,8 @@
+2002-07-19  Bruno Haible  <bruno@clisp.org>
+
+	* gettext.m4 (AM_GNU_GETTEXT_VERSION): New macro.
+	Reported by Akim Demaille <akim@epita.fr>.
+
 2002-07-17  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.11.3 released.
